--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -224,6 +224,7 @@
 \newcommand{\Context}{\ContextC}
 \newcommand{\ContextC}{\Upgamma}
 \newcommand{\ContextD}{\Updelta}
+\newcommand{\ContextE}{\Uptheta}
 \newcommand{\un}{{?}}
 
 \newcommand{\Tag}[1][a]{\mathsf{\color{teal}#1}}
@@ -265,6 +266,9 @@
 \newcommand{\subf}{\preceq}
 \newcommand{\tred}{\leadsto}
 \newcommand{\rtred}{\tred^?}
+
+\newcommand{\Splitting}[3]{#1 \simeq #2 + #3}
+\newcommand{\SimpleSplitting}[3]{#1 \simeq #2, #3}
 
 %%%%%%%%%%%%%%%%%
 %%% FUNCTIONS %%%
