--- a/paper/main.tex
+++ b/paper/main.tex
@@ -28,6 +28,15 @@
 \newunicodechar{⅋}{\ensuremath{\Par}}
 \newunicodechar{∀}{\ensuremath{\forall}}
 \newunicodechar{′}{\ensuremath{{}^\prime}}
+\newunicodechar{≡}{\ensuremath{\equiv}}
+\newunicodechar{₂}{\ensuremath{{}_2}}
+\newunicodechar{≃}{\ensuremath{\simeq}}
+\newunicodechar{Γ}{\ensuremath{\ContextC}}
+\newunicodechar{Δ}{\ensuremath{\ContextD}}
+\newunicodechar{Θ}{\ensuremath{\ContextE}}
+\newunicodechar{∷}{\ensuremath{{::}}}
+\newunicodechar{×}{\ensuremath{\times}}
+\newunicodechar{∃}{\ensuremath{\exists}}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
